[tool.poetry]
name = "modul 6"
version = "0.1.0"
description = ""
authors = ["Oleksandr_Skuz <138138803+OleksandrSkuz1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.9"
faker = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
